[package]
name = "thunderstore-discord-bot-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "thunderstore-discord-bot-rust"
path = "src/main.rs"

[dependencies]
serenity = "0.10"
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15"
mongodb = { version = "2.0.0-beta.3", features = ["bson-u2i"] }
